feat: add graphql

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es2022",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -20,11 +23,34 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "@/utils": ["./utils/*"],
-      "@/components": ["./components/*"],
-    }
+      "@/*": [
+        "./*"
+      ],
+      "@/utils": [
+        "./utils/*"
+      ],
+      "@/components": [
+        "./components/*"
+      ],
+      "@/services": [
+        "./services/*"
+      ],
+      "@/server": [
+        "./server/*"
+      ]
+    },
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "prettier.config.mjs"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "prettier.config.mjs"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
