--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,27 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^5.18.0",
+    "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "graphql": "^16.11.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.24.2",
+    "graphql-yoga": "^5.13.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "reflect-metadata": "^0.2.2",
+    "tailwind-merge": "^3.2.0",
+    "tslib": "^2.8.1",
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/graphql-fields": "^1.3.9",
     "@types/node": "^20.17.32",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -29,9 +38,10 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^6.7.0",
+    "prisma": "^5.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
+    "typegraphql-prisma": "^0.28.0",
     "typescript": "^5.8.3"
   }
 }
