--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@prisma/client": "^5.18.0",
+    "@prisma/extension-accelerate": "^1.3.0",
+    "@prisma/instrumentation": "^5.22.0",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
     "@types/graphql-fields": "^1.3.9",
     "@types/node": "^20.17.32",
