--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "prisma generate --no-engine && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
@@ -27,7 +28,8 @@
     "reflect-metadata": "^0.2.2",
     "tailwind-merge": "^3.2.0",
     "tslib": "^2.8.1",
-    "type-graphql": "^2.0.0-rc.2"
+    "type-graphql": "^2.0.0-rc.2",
+    "prisma": "^5.18.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -41,7 +43,6 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "prisma": "^5.18.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typegraphql-prisma": "^0.28.0",
