--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "prisma generate && next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,13 +23,14 @@
     "graphql-yoga": "^5.13.4",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "prisma": "^5.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
+    "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tslib": "^2.8.1",
-    "type-graphql": "^2.0.0-rc.2",
-    "prisma": "^5.18.0"
+    "type-graphql": "^2.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -44,6 +45,7 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
     "typegraphql-prisma": "^0.28.0",
     "typescript": "^5.8.3"
