--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate --no-engine"
+    "postinstall": "prisma generate --no-engine",
+    "migrate": "prisma migrate dev",
+    "apply": "prisma migrate deploy"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
