--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -36,7 +36,7 @@
         "./services/*"
       ],
       "@/server": [
-        "./server/*"
+        "graphql/*"
       ]
     },
     "moduleResolution": "node",
