--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@prisma/instrumentation": "^5.22.0",
+    "@radix-ui/react-slot": "^1.2.0",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
