--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
+    "@google/genai": "^0.12.0",
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@prisma/instrumentation": "^5.22.0",
