feat: some stuff

--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,14 @@
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.24.2",
     "graphql-yoga": "^5.13.4",
+    "import-in-the-middle": "^1.13.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "prisma": "^5.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "reflect-metadata": "^0.2.2",
+    "require-in-the-middle": "^7.5.2",
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tslib": "^2.8.1",
