--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "@eslint/eslintrc": "^3",
     "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/graphql-fields": "^1.3.9",
     "@types/node": "^20.17.32",
     "@types/react": "^19",
