--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@prisma/instrumentation": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
     "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
@@ -25,8 +26,10 @@
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.24.2",
     "graphql-yoga": "^5.13.4",
+    "immer": "^10.1.1",
     "import-in-the-middle": "^1.13.1",
     "lucide-react": "^0.507.0",
+    "motion": "^12.9.7",
     "next": "15.3.1",
     "prisma": "^5.18.0",
     "react": "^19.0.0",
@@ -36,7 +39,9 @@
     "svix": "^1.64.1",
     "tailwind-merge": "^3.2.0",
     "tslib": "^2.8.1",
-    "type-graphql": "^2.0.0-rc.2"
+    "type-graphql": "^2.0.0-rc.2",
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
