feat: add conversation resolver and other resolvers

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -27,7 +27,8 @@
       "@/utils": ["./utils/*"],
       "@/components": ["./components/*"],
       "@/services": ["./services/*"],
-      "@/store": ["./store/*"]
+      "@/store": ["./store/*"],
+      "@/prisma": ["./prisma/*"],
     },
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
