--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "prisma": "^5.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "reflect-metadata": "^0.2.2",
     "require-in-the-middle": "^7.5.2",
     "svix": "^1.64.1",
@@ -41,6 +42,8 @@
     "tslib": "^2.8.1",
     "type-graphql": "^2.0.0-rc.2",
     "vaul": "^1.1.2",
+    "zod": "^3.24.4",
+    "zod-prisma-types": "^3.2.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
