--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
     "@google/genai": "^0.12.0",
+    "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^5.18.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@prisma/instrumentation": "^5.22.0",
+    "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
     "class-validator": "^0.14.2",
