--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev --turbopack",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "next lint",
@@ -15,48 +16,40 @@
     "@clerk/nextjs": "^6.18.5",
     "@google/genai": "^0.12.0",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^1.3.0",
-    "@prisma/instrumentation": "^5.22.0",
+    "@prisma/instrumentation": "^6.8.2",
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
-    "class-validator": "^0.14.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "graphql": "^16.11.0",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.24.2",
-    "graphql-yoga": "^5.13.4",
     "immer": "^10.1.1",
-    "import-in-the-middle": "^1.13.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.7",
     "next": "15.3.1",
-    "prisma": "^5.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
-    "reflect-metadata": "^0.2.2",
-    "require-in-the-middle": "^7.5.2",
     "svix": "^1.64.1",
+    "swagger-ui-react": "^5.22.0",
     "tailwind-merge": "^3.2.0",
     "tslib": "^2.8.1",
-    "type-graphql": "^2.0.0-rc.2",
     "vaul": "^1.1.2",
     "zod": "^3.24.4",
     "zod-prisma-types": "^3.2.4",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
+    "prisma": "^6.8.2",
     "@eslint/eslintrc": "^3",
     "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/graphql-fields": "^1.3.9",
     "@types/node": "^20.17.32",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "^5.18.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
@@ -64,7 +57,6 @@
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
-    "typegraphql-prisma": "^0.28.0",
     "typescript": "^5.8.3"
   }
 }
