--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,15 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
+    "import-in-the-middle": "^1.13.2",
     "lucide-react": "^0.507.0",
     "motion": "^12.9.7",
     "next": "15.3.1",
+    "next-swagger-doc": "^0.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "require-in-the-middle": "^7.5.2",
     "svix": "^1.64.1",
     "swagger-ui-react": "^5.22.0",
     "tailwind-merge": "^3.2.0",
@@ -41,7 +44,6 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "prisma": "^6.8.2",
     "@eslint/eslintrc": "^3",
     "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
@@ -54,6 +56,7 @@
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
