--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "motion": "^12.9.7",
     "next": "15.3.1",
     "next-swagger-doc": "^0.4.1",
+    "next-themes": "^0.4.6",
     "prisma-openapi": "^1.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
