--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:apply": "prisma migrate deploy",
     "prisma:generate": "prisma generate",
-    "prisma:format": "prisma format"
+    "prisma:format": "prisma format",
+    "test:unit": "vitest -c ./vitest.config.unit.ts",
+    "test:unit:ui": "vitest -c ./vitest.config.unit.ts --ui"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
@@ -56,6 +58,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "^5.18.0",
+    "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
@@ -64,6 +67,8 @@
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.1.4",
+    "vitest-mock-extended": "^3.1.0"
   }
 }
