reafactor: adding turborepo

--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "dev:turbo": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate --no-engine",
@@ -14,7 +14,8 @@
     "prisma:generate": "prisma generate",
     "prisma:format": "prisma format",
     "test:unit": "vitest -c ./vitest.config.unit.ts",
-    "test:unit:ui": "vitest -c ./vitest.config.unit.ts --ui"
+    "test:unit:ui": "vitest -c ./vitest.config.unit.ts --ui",
+    "check-types": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.18.5",
