--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -51,7 +51,7 @@
     "zustand": "^5.0.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@repo/config-eslint": "workspace:*",
     "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
@@ -61,7 +61,6 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@vitest/coverage-v8": "^3.1.4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.8.2",
