--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write .",
     "postinstall": "prisma generate --no-engine",
     "prisma:migrate": "prisma migrate dev",
     "prisma:apply": "prisma migrate deploy",
@@ -52,22 +53,20 @@
   },
   "devDependencies": {
     "@repo/config-eslint": "workspace:*",
+    "@repo/config-prettier": "workspace:*",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@prisma/extension-optimize": "^1.1.8",
     "@tailwindcss/postcss": "^4",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20.17.32",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "^5.18.0",
     "@vitest/coverage-v8": "^3.1.4",
-    "eslint": "^9",
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
     "tsx": "^4.19.4",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3",
     "vitest": "^3.1.4",
     "vitest-mock-extended": "^3.1.0"
   }
