--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "@repo/config-eslint": "workspace:*",
     "@repo/config-prettier": "workspace:*",
+    "@repo/config-vitest": "workspace:*",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@prisma/extension-optimize": "^1.1.8",
@@ -62,12 +63,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/swagger-ui-react": "^5.18.0",
-    "@vitest/coverage-v8": "^3.1.4",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
-    "tsx": "^4.19.4",
-    "tw-animate-css": "^1.2.9",
-    "vitest": "^3.1.4",
-    "vitest-mock-extended": "^3.1.0"
+    "tw-animate-css": "^1.2.9"
   }
 }
