--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "turbo dev",
     "lint": "turbo lint",
     "type-check": "turbo type-check",
-    "test": "turbo test",
+    "test:unit": "turbo test:unit",
     "format": "turbo format"
   },
   "workspaces": [
@@ -18,7 +18,11 @@
     "turbo": "^2.5.4",
     "prettier": "^3.5.3",
     "eslint": "^9",
-    "typescript": "^5"
+    "typescript": "^5",
+    "tsx": "^4.19.4",
+    "vitest": "^3.1.4",
+    "@vitest/coverage-v8": "^3.1.4",
+    "vitest-mock-extended": "^3.1.0"
   },
   "packageManager": "pnpm@10.0.0"
 }
