--- a/packages/config-prettier/package.json
+++ b/packages/config-prettier/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./next": "./next.js"
+    "./next": "./next.js",
+    "./react": "./react.js"
   }
 }
