--- a/packages/config-eslint/package.json
+++ b/packages/config-eslint/package.json
@@ -4,12 +4,21 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./next": "./next.js"
+    ".": "./index.js",
+    "./next": "./next.js",
+    "./react": "./react.js"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@eslint/js": "^9.29.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "typescript": "^5"
+    "eslint-plugin-only-warn": "^1.1.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-turbo": "^2.5.4",
+    "globals": "^16.2.0",
+    "typescript": "^5",
+    "typescript-eslint": "^8.34.1"
   }
 }
